MAINT: library vulnerabilities action (#505)
* library vulnerabilities action

* fix workflow file

* address bandit issues with exclusions and code changes

* whitespace in pyproject.toml

* remove commented out import

* address some copilot review comments

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,19 @@ jobs:
           operating-system: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
 
+  check-vulnerabilities:
+    name: "Check library vulnerabilities"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ansys/actions/check-vulnerabilities@v10.0
+        with:
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+          token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
+          python-package-name: ${{ env.PACKAGE_NAME }}
+          dev-mode: ${{ github.ref != 'refs/heads/main' }}
+          #upload-reports: True
+          #hide-log: false
+
   build:
     name: Build package, incl. API generation
     needs: [smoke-tests]
