--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ maintainers = [
 dependencies = [
     "ansys-api-systemcoupling==0.2.0",
     "ansys-platform-instancemanagement~=1.0",
+    "docker>=7.1.0",
     "grpcio>=1.30.0",
     "grpcio-status>=1.30.0",
     "googleapis-common-protos>=1.50.0",
